<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kunal_realty_services.Fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="com.example.kunal_realty_services.Fragment.ExpensesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_expenses" />
    <fragment
        android:id="@+id/navigation_wallet_ledger"
        android:name="com.example.kunal_realty_services.Fragment.WalletLadgerFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_wallet_ladger" />

    <fragment
        android:id="@+id/navigation_sales"
        android:name="com.example.kunal_realty_services.Fragment.SalesFragment"
        android:label="@string/menu_sales"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.kunal_realty_services.Fragment.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>